# AmazonML2024

./: .gitignore  blip.ipynb  pyproject.toml  test.csv  vector.csv  vector.ipynb
dataset/: .~lock.train.csv#
src/training/height/: blip.ipynb  height.csv  model.ipynb  ocr.csv  preprocessing.ipynb  training.ipynb  utils_height.py  vector.ipynb
src/training/height/data/: height_with_ocr.csv  test.csv
